--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-torch
+onnx~=1.13.0
+numpy~=1.23.5
+
+torch~=1.13.0+cpu
 torchvision
 torchaudio
-scikit-learn
-onnx
-plotext
-onnxruntime
-transformers
-datasets
+scikit-learn~=1.2.0
+plotext~=5.2.8
+onnxruntime~=1.13.1
+transformers~=4.25.1
+datasets~=2.7.1
+tqdm~=4.64.1
